force-app/main/default/objects/Demo__c/fields/Last_GrandChild__c.field-meta.xml
<CustomField>
    <fullName>Last_GrandChild__c</fullName>
    <label>Last GrandChild</label>
    <length>20</length>
    <type>Text</type>
</CustomField>