force-app/main/default/objects/Demo__c/fields/Last_GrandParent__c.field-meta.xml
<CustomField>
    <fullName>Last_GrandParent__c</fullName>
    <label>Last GrandParent</label>
    <length>30</length>
    <type>Text</type>
</CustomField>