force-app/main/default/objects/Demo__c/fields/Parent_Demo__c.field-meta.xml
<CustomField>
    <fullName>Parent_Demo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Demo</label>
    <referenceTo>Demo__c</referenceTo>
    <relationshipLabel>Demos</relationshipLabel>
    <relationshipName>Demos</relationshipName>
    <type>Lookup</type>
</CustomField>