force-app/main/default/objects/Demo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Parent_Demo__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>